@@ -30,65 +30,6 @@
 /*                    Internal Routines                     */
 /************************************************************/
 
-/* TODO: remove it after testing of $Mft defrag on Vista/Win7 */
-WINX_FILE *new_winx_vopen(char volume_letter)
-{
-	char path[] = "\\??\\A:";
-	ANSI_STRING as;
-	UNICODE_STRING us;
-	NTSTATUS status;
-	HANDLE hFile;
-	OBJECT_ATTRIBUTES oa;
-	IO_STATUS_BLOCK iosb;
-	ACCESS_MASK access_mask = FILE_GENERIC_READ /* | FILE_GENERIC_WRITE */;
-	ULONG disposition = FILE_OPEN;
-	ULONG flags = FILE_SYNCHRONOUS_IO_NONALERT | FILE_NO_INTERMEDIATE_BUFFERING | FILE_NON_DIRECTORY_FILE;
-	WINX_FILE *f;
-
-	path[4] = winx_toupper(volume_letter);
-	RtlInitAnsiString(&as,path);
-	if(RtlAnsiStringToUnicodeString(&us,&as,TRUE) != STATUS_SUCCESS){
-		DebugPrint("new_winx_vopen: cannot open %s: not enough memory",path);
-		return NULL;
-	}
-	InitializeObjectAttributes(&oa,&us,OBJ_CASE_INSENSITIVE,NULL,NULL);
-
-    if(winx_get_os_version() >= WINDOWS_7)
-        flags |= FILE_DISALLOW_EXCLUSIVE;
-
-	status = NtCreateFile(&hFile,
-			access_mask,
-			&oa,
-			&iosb,
-			NULL,
-			FILE_ATTRIBUTE_NORMAL,
-			FILE_SHARE_READ | FILE_SHARE_WRITE,
-			disposition,
-			flags,
-			NULL,
-			0
-			);
-	RtlFreeUnicodeString(&us);
-	if(status != STATUS_SUCCESS){
-		DebugPrintEx(status,"new_winx_vopen: cannot open %s",path);
-		return NULL;
-	}
-	f = (WINX_FILE *)winx_heap_alloc(sizeof(WINX_FILE));
-	if(!f){
-		NtClose(hFile);
-		DebugPrint("new_winx_vopen: cannot open %s: not enough memory",path);
-		return NULL;
-	}
-	f->hFile = hFile;
-	f->roffset.QuadPart = 0;
-	f->woffset.QuadPart = 0;
-	f->io_buffer = NULL;
-	f->io_buffer_size = 0;
-	f->io_buffer_offset = 0;
-	f->wboffset.QuadPart = 0;
-	return f;
-}
-
 /*
 * The following routines are used to track
 * space temporarily allocated by system
@@ -787,7 +728,7 @@ int move_file(winx_file_info *f,
 	was_fragmented = is_fragmented(f);
 
 	/* open the file */
-	Status = udefrag_fopen(f,&hFile);
+	Status = winx_defrag_fopen(f,WINX_OPEN_FOR_MOVE,&hFile);
 	if(Status != STATUS_SUCCESS){
 		DebugPrintEx(Status,"move_file: cannot open %ws",f->path);
 		/* redraw space */
@@ -803,7 +744,7 @@ int move_file(winx_file_info *f,
 	
 	/* move the file */
 	move_file_helper(hFile,f,vcn,length,target,jp);
-	NtCloseSafe(hFile);
+	winx_defrag_fclose(hFile);
 
 	/* get file moving result */
 	memcpy(&new_file_info,f,sizeof(winx_file_info));
